# bees

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt
scripts/: dev.sh  run.sh
src/: main.py
src/account/: controller.py  schemas.py  services.py
src/account/models/: __init__.py  base.py  oauth.py  users.py
src/auth/: controller.py  dependencies.py  jwt_auth.py  middleware.py  schemas.py  service.py  services.py
src/core/: config.py
src/migrations/: env.py
src/migrations/versions/: f11455d8dd66_initial_tables.py
src/utils/: password.py
