[project]
name = "bees"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "advanced-alchemy>=1.8.1",
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "litestar[jwt,sqlalchemy,structlog]>=2.18.0",
    "passlib[argon2,bcrypt]>=1.7.4",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
    "psycopg2-binary>=2.9.11",
    "granian>=2.6.0",
    "litestar-users[oauth2,postgresql]>=1.7.0",
    "python-multipart>=0.0.20",
    "cryptography>=46.0.3",
]

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "httpx>=0.28.1",
    "mypy>=1.19.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.8",
]
